# deep-entropy-scaling

./: .gitignore  README.md  demo.ipynb  main_denoise.ipynb  main_train.ipynb  pyproject.toml
deep_entropy_scaling/: nn_dataset.py  nn_model.py  nn_training.py  utils.py
demo_data/: butanol_data.csv  saft_paras_demo.csv
train71/: Xscaler.json  Yscaler.json  best_result_config.json  checkpoint.pt  listofspecies.csv  model_state_dict.json  state_dict.json
